<resources>
    <string name="app_name" translatable="false">VOID Launcher</string>
    <string name="lock_layout_description" translatable="false">lock layout description to be used a unique id to lock screen</string>
    <string name="day_battery" formatted="false" translatable="false">%s, %d%%</string>
    <string name="tag_0" translatable="false">0</string>
    <string name="tag_1" translatable="false">1</string>
    <string name="tag_2" translatable="false">2</string>
    <string name="tag_3" translatable="false">3</string>
    <string name="tag_4" translatable="false">4</string>
    <string name="tag_5" translatable="false">5</string>
    <string name="tag_6" translatable="false">6</string>
    <string name="tag_7" translatable="false">7</string>
    <string name="tag_8" translatable="false">8</string>
    <string name="tag_9" translatable="false">9</string>
    <string name="tag_10" translatable="false">10</string>
    <string name="time_spent_min" translatable="false"><b>%1$sm</b></string>
    <string name="time_spent_hour" translatable="false">%1$sh %2$sm</string>

    <string name="app">App</string>
    <string name="set_as_default_launcher">Set as default launcher</string>
    <string name="set_as_default_launcher_u"><u>Set as default launcher</u></string>
    <string name="set_as_default_launcher_first">Set VOID Launcher as default first</string>
    <string name="app_text_color">Text color</string>
    <string name="double_tap_to_lock_screen">Double tap to lock</string>
    <string name="admin_permission_message">VOID Launcher promises to use lock screen permission responsibly. VOID Launcher does not collect or share any data.</string>
    <string name="about">About</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="change_default_launcher">Change default launcher</string>
    <string name="privacy">Privacy</string>
    <string name="swipe_up_for_apps">1. Swipe up for all apps\n2. Long press empty space for settings</string>
    <string name="apps_on_home_screen">Apps on home screen</string>
    <string name="daily_wallpaper_update">Daily new wallpaper</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="home_layout_alignment">App alignment</string>
    <string name="swipe_right_app">Swipe right app</string>
    <string name="app_drawer_tips">Tip: Start typing an app name to auto-launch it</string>
    <string name="okay">Okay</string>
    <string name="cool">Cool!</string>
    <string name="auto_show_keyboard">Auto show keyboard</string>
    <string name="hide">Hide</string>
    <string name="status_bar">Status bar on top</string>
    <string name="rename">Rename</string>
    <string name="show_date_time">Show date time</string>
    <string name="appearance">Appearance</string>
    <string name="gestures">Gestures</string>
    <string name="system_default">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="welcome_to_void_settings">Welcome to the VOID Launcher settings!
        \n\nCustomize your minimalist experience and enjoy a distraction-free environment.</string>
    <string name="keyboard_message">Hi, keyboard is the fastest way to find and launch apps in VOID Launcher. Can we request you to keep this On for a few more days and then decide?
        \n\nThe choice is always yours.</string>
    <string name="digital_wellbeing_message">If you want to set time limits for certain apps, Digital Wellbeing feature of Android can help you do it.           Please search for Digital Wellbeing in your phone settings and enable it.</string>
    <string name="app_usage_message">To show/hide your screen time on the home screen, please allow or disallow the app usage permission.
        \n\nNote: No app usage data is collected. Everything is processed on your device.</string>
    <string name="accessibility_service_description">The accessibility permission is required to enable double tap to lock. Any data acquired by VOID Launcher via this service will not leave your device.</string>
    <string name="open">Open link</string>
    <string name="copy">Copy</string>
    <string name="close">Close</string>
    <string name="not_now">Not now</string>
    <string name="date">Date</string>
    <string name="date_only">Date only</string>
    <string name="time_only">Time only</string>
    <string name="top">Top</string>
    <string name="middle">Middle</string>
    <string name="bottom">Bottom</string>
    <string name="bottom_on">On</string>
    <string name="bottom_off">Off</string>
    <string name="please_set_void_as_default_first">Please set VOID Launcher as default first</string>
    <string name="tip_start_typing_for_rename">Tip: Start typing for app RENAME option</string>
    <string name="hidden_apps_message">Note: Tap on \'VOID Launcher\' at the top of this Settings page to find your hidden apps.\n\nMore details available in our About page.</string>
    <string name="swipe_down_for">Swipe down for</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications">No new notifications</string>
    <string name="clear_all">Clear all</string>
    <string name="notes_title">Notes</string>
    <string name="add_note_hint">Add a new note…</string>
    <string name="no_notes">No notes yet</string>
    <string name="edit">Edit</string>
    <string name="remind">Remind</string>
    <string name="delete_note">Delete</string>
    <string name="reminder_set">Reminder set for 30 minutes</string>
    <string name="accessibility_disclosure">Please turn on or off VOID Launcher\'s accessibility service in your device\'s settings to enable or disable this feature.
    \n\nPlease note that this service is only used to let you turn off your device\'s screen using the double tap gesture. Our accessibility service does not collect or share any data.</string>
    <string name="accept">Accept</string>
    <string name="permission">Permission</string>
    <string name="double_tap_lock">Double tap to lock</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="not_working"><u>Not working?</u></string>
    <string name="info">Info</string>
    <string name="delete">Uninstall</string>
    <string name="text_size">Text size</string>
    <string name="home_text_size">Home text size</string>
    <string name="app_drawer_text_size">App drawer text size</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="please_turn_on_double_tap_to_unlock">Please turn on double tap to lock</string>
    <string name="launcher_failed_to_lock_device">VOID Launcher failed to lock device.\nPlease check your app settings.</string>
    <string name="long_press_to_select_app">Long press to select app</string>
    <string name="unable_to_open_app">Unable to open app</string>
    <string name="copied">Copied</string>
    <string name="system_app_cannot_delete">System app, cannot delete</string>
    <string name="type_a_new_app_name_first">Type a new app name first</string>
    <string name="app_not_found">App not found</string>
    <string name="unable_to_launch_app">Unable to launch app</string>
    <string name="search_for_Launcher_or_home_app">Search for Launcher or Home app</string>
    <string name="swipe_left_app_enabled">Swipe left app enabled</string>
    <string name="swipe_right_app_enabled">Swipe right app enabled</string>
    <string name="swipe_left_app_disabled">Swipe left app disabled</string>
    <string name="swipe_right_app_disabled">Swipe right app disabled</string>
    <string name="your_wallpaper_will_update_shortly">Your wallpaper will update shortly</string>
    <string name="void_is_not_default_launcher">VOID Launcher is not default. Wallpaper update will fail.</string>
    <string name="long_press_to_enable">Long press to enable</string>
    <string name="no_hidden_apps">No hidden apps</string>
    <string name="hidden_apps">Hidden apps</string>
    <string name="adapter_show">Show</string>
    <string name="adapter_hide">Hide</string>
    <string name="are_you_using_your_phone_or_is_your_phone_using_you">Are you using your phone, or is your phone using you?</string>
    <string name="alignment_changed">Alignment changed ✅</string>
    <string name="home_screen">Home screen</string>
    <string name="hey">Hey</string>
    <string name="screen_time">Screen time</string>
    <string name="learn_more">Learn more</string>
    <string name="notification_bar">Notification bar</string>
    <string name="credit_github_knownassurajit">Credits: knownassurajit</string>
</resources>
